k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cv-stack
  labels:
    name: cv-stack
    app: cv
